Filter chips now fade out when not active, localization fixes and action items fixed on theme picker fragment

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -144,4 +144,5 @@
     <string name="theme_sky">Cielo</string>
     <string name="theme_vintage">Clásico</string>
     <string name="theme_cerulean">Cerúleo</string>
+    <string name="theme_picker_title">Temas</string>
 </resources>
